[tool.poetry]
name = "ci_dsa"
version = "0.1.0"
description = "practice for data structure and algo"
authors = ["chashi-mahiul-islam-bd <ci20l@my.fsu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
notebook = "^6.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
